--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,8 @@
     "icons": [{
             "src": "assets/Fovers512x512.png",
             "sizes": "512x512",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "any maskable"
         },
         {
             "src": "assets/Fovers384x384.png",
